--- a/presentation-memoire-emamirad.bib
+++ b/presentation-memoire-emamirad.bib
@@ -108,7 +108,7 @@
 	Pages = {81-90}}
 
 @article{Guigues1986,
-	Author = {Guigues, J. L. and Duquenne V.},
+	Author = {Guigues, Jean-Louis and Duquenne, Vincent},
 	Title = {Familles minimales d'implications informatives r{\'e}sultant d'un tableau de donn{\'e}es binaires},
 	Journal = {Math\'ematiques et Sciences Humaines},
 	Volume = {95},
